samples/_failures_safe/1761525997_e1eb2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e084cd0.c: In function ‘main’:
./samples/SAFE/__tmp_6e084cd0.c:151:9: error: expected identifier at end of input
  151 |         printf("%s [%s] %s\n", entries[i].timestamp, entries[i].
      |         ^~~~~~
./samples/SAFE/__tmp_6e084cd0.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e084cd0.c:151:9: error: expected declaration or statement at end of input
